--- a/Magic/defaults/mobs.defaults.yml
+++ b/Magic/defaults/mobs.defaults.yml
@@ -67,6 +67,16 @@ dark_wizard:
   - type: speed
     amplifier: 1
     
+killer_bunny:
+  type: rabbit
+  rabbit_type: the_killer_bunny
+  name: Killer Bunny
+  health: 100
+  default_drops: false
+  drops:
+  - gold_nugget@10
+  - sp:10
+
 madscientist:
   name: Mad Scientist
   type: pig_zombie
