--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -52,21 +52,6 @@ players:
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     party: Midori
     rank: 20
-  28556dea-667d-409f-b2ff-fb4177a20ff2:
-    party: ttttt
-    rank: 20
-  182fa38f-b321-44cf-ba16-fe70847459c3:
-    party: ttttt
-    rank: 5
-  f559cef3-ef94-4e1e-8bcf-1d16dcad2aa6:
-    party: ttttt
-    rank: 5
-  d0b35aee-f6af-44ff-84ed-6342e8370492:
-    party: ttttt
-    rank: 5
-  fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    party: ttttt
-    rank: 5
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     party: VenusLabs
     rank: 20
@@ -88,9 +73,6 @@ players:
   70692ac4-4898-4745-8f4b-60e82c979b5f:
     party: eeee
     rank: 20
-  2a63e405-eecf-480a-9fcf-1e22b996d998:
-    party: hello
-    rank: 20
   41b4ef25-3a3e-4ac4-a8aa-739259469920:
     party: whohurtyou
     rank: 5
@@ -100,17 +82,23 @@ players:
   869b4227-b51e-452e-adbd-48759a6848dd:
     party: debate
     rank: 20
-  663fa87e-be4c-45d5-bdde-587fa94e8f97:
-    party: hello
-    rank: 5
-  4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    party: ttttt
-    rank: 5
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     party: ESKETIT
     rank: 20
   f621586e-8ef8-448d-9264-86b61375052e:
     party: ESKETIT
+    rank: 5
+  39b20e12-93c6-4856-9284-04bd5e0646f8:
+    party: '124'
+    rank: 20
+  28556dea-667d-409f-b2ff-fb4177a20ff2:
+    party: Fam
+    rank: 20
+  fbb8c072-4c4b-49c8-948b-26e8ad73099e:
+    party: Fam
+    rank: 5
+  4ff867f5-6cab-413e-9fad-e4d77ca48778:
+    party: Fam
     rank: 5
 parties:
   anti:
@@ -161,15 +149,6 @@ parties:
     leader: dbb47887-bfbd-40e6-bfec-3d1053ea3aff
     members:
     - dbb47887-bfbd-40e6-bfec-3d1053ea3aff
-  ttttt:
-    leader: 28556dea-667d-409f-b2ff-fb4177a20ff2
-    members:
-    - 28556dea-667d-409f-b2ff-fb4177a20ff2
-    - 182fa38f-b321-44cf-ba16-fe70847459c3
-    - f559cef3-ef94-4e1e-8bcf-1d16dcad2aa6
-    - d0b35aee-f6af-44ff-84ed-6342e8370492
-    - fbb8c072-4c4b-49c8-948b-26e8ad73099e
-    - 4ff867f5-6cab-413e-9fad-e4d77ca48778
   VenusLabs:
     leader: e207f46f-ac40-4f49-8b7d-2317c67f1bd0
     members:
@@ -192,11 +171,6 @@ parties:
     leader: 70692ac4-4898-4745-8f4b-60e82c979b5f
     members:
     - 70692ac4-4898-4745-8f4b-60e82c979b5f
-  hello:
-    leader: 2a63e405-eecf-480a-9fcf-1e22b996d998
-    members:
-    - 2a63e405-eecf-480a-9fcf-1e22b996d998
-    - 663fa87e-be4c-45d5-bdde-587fa94e8f97
   Speak:
     leader: e6de8cf0-af45-44e4-882f-d98446f4b31b
     members:
@@ -210,3 +184,13 @@ parties:
     members:
     - ca7e8de8-30f0-43c5-9701-982c10ea9459
     - f621586e-8ef8-448d-9264-86b61375052e
+  '124':
+    leader: 39b20e12-93c6-4856-9284-04bd5e0646f8
+    members:
+    - 39b20e12-93c6-4856-9284-04bd5e0646f8
+  Fam:
+    leader: 28556dea-667d-409f-b2ff-fb4177a20ff2
+    members:
+    - 28556dea-667d-409f-b2ff-fb4177a20ff2
+    - fbb8c072-4c4b-49c8-948b-26e8ad73099e
+    - 4ff867f5-6cab-413e-9fad-e4d77ca48778
