--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3852,8 +3852,8 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&5S&dt&7a&5rf&4i&dr&5e'
-      suffix: '&5'
+      prefix: '&8Black &6Racer(WW)'
+      suffix: '&6'
     worlds:
       survival112:
         permissions:
@@ -12287,13 +12287,13 @@ users:
       name: Ultimate_Gamer00
   1699df25-d9aa-425d-afbc-1c474d35cbf8:
     group:
-    - infinitysilversurfer
+    - thanos
     permissions: []
     options:
       name: kevy123
   aa323969-2ccc-49c2-90ee-fbf60fa82ee6:
     group:
-    - spiderwomangwenstacy
+    - apocalypse
     options:
       name: Sophia1807
     permissions: []
@@ -12321,7 +12321,7 @@ users:
     - multiverse.access.policeoffice
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - doctormanhattan
+    - mortal
     options:
       name: Tony_MCU
     worlds:
@@ -12341,7 +12341,7 @@ users:
     permissions: []
   2a63e405-eecf-480a-9fcf-1e22b996d998:
     group:
-    - vision
+    - martianmanhunter
     options:
       name: RoryMeeduri
     worlds:
@@ -12379,7 +12379,6 @@ users:
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     permissions:
     - is.officer
-    - chat.cooldown
     - is.secretary
     - is.headsecretary
     - is.infomanager
@@ -12408,8 +12407,7 @@ users:
         permissions: []
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - secretary
-    - harleyquinn
+    - powergirl
     options:
       name: GirlFromDownUnda
       prefix: ''
@@ -12454,12 +12452,12 @@ users:
     permissions: []
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - flashbarryallen
+    - blackracerwilliewalker
     options:
       name: Biscuit_Panda
   63967525-fb2d-4bcf-b8d3-181e8e3a2e5c:
     group:
-    - mew
+    - criminal
     options:
       name: _PapyrusPlayz_
     permissions: []
@@ -12526,7 +12524,7 @@ users:
     permissions:
     - is.secretary
     group:
-    - mortal
+    - supergirl
     options:
       name: Rairakuu
   26d9c4d7-f5ca-4178-a178-73cd061c7b3a:
@@ -12592,7 +12590,7 @@ users:
       name: KnifingMonkey
   c7752878-d819-46ac-9cb1-4ab56769b965:
     group:
-    - beerus
+    - criminal
     options:
       name: TheFlash_13
     permissions: []
@@ -12709,9 +12707,11 @@ users:
     permissions: []
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group:
-    - firestormraymondstein
+    - onepunchman
     options:
       name: aldrin524
+    permissions:
+    - multiverse.access.policeoffice
   c156f41c-55c2-45de-af2b-1ac53278199c:
     group:
     - spidermanpeterparker
@@ -12745,9 +12745,10 @@ users:
       name: wiegand345
   48d85138-f45e-4b3d-aaa3-29a719540d7f:
     group:
-    - blackracerwilliewalker
+    - darthvader
     options:
       name: Chrizz
+    permissions: []
   61ab6a9b-57a8-48d6-b753-dc4d7366d991:
     group:
     - blacklanternmartianmanhunter
@@ -12793,7 +12794,7 @@ users:
       name: NightwingDC_
   a32c31c5-2d59-43fd-84f9-f42c7af9be1d:
     group:
-    - flashwallywest
+    - ironmanmkxv
     options:
       name: NayDgel
   b896c003-0061-4c88-9c39-00f05b17957e:
@@ -12942,9 +12943,10 @@ users:
       name: Dragonlord42
   63cfe6d7-f77e-455f-8db7-aabeb8d1a227:
     group:
-    - aquaman
+    - ironmanmkxliii
     options:
       name: _GasterPlayzMC_
+    permissions: []
   706e34e9-e166-4de1-9a0e-528bee0703b3:
     group:
     - ultraboy
@@ -12957,7 +12959,7 @@ users:
       name: CanadianMike7
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - reverseflashedwardclariss
+    - vulture
     options:
       name: Predamorph1519
     permissions: []
@@ -13059,7 +13061,7 @@ users:
       name: iiWeakness
   46e67a8a-c987-4526-b04f-c4db06db5855:
     group:
-    - martianmanhunter
+    - zoom
     options:
       name: iiStrengthz
     permissions: []
@@ -13084,7 +13086,7 @@ users:
       prefix: '&f&lKCocco Owner&a&l/'
       name: First_Lady
     group:
-    - mortal
+    - redlanternsupergirl
     permissions:
     - is.officer
   a5c92806-da45-47ab-90f9-c96a8f197c45:
@@ -13104,7 +13106,7 @@ users:
       name: ShadowMasterII
   ec365045-50d3-4ca2-a1dc-f0811ca5de71:
     group:
-    - mortal
+    - apocalypse
     options:
       name: TheYoungPope
     permissions: []
@@ -13167,14 +13169,15 @@ users:
       name: Supermoonwalker
   f24d80bb-ec98-4d05-9282-914ec5f6f1a0:
     group:
-    - flashbarryallen
+    - savitar
     options:
       name: Wowcraftman
   cc7352f9-9592-47fb-8f11-952198d02366:
     group:
-    - whitelanterntelosusr
+    - godfallsuperman
     options:
       name: pacmanny
+    permissions: []
   5a157201-96e2-4c9d-ba9e-376a0b61289d:
     group:
     - darthrevan
@@ -13469,7 +13472,7 @@ users:
       name: FreeSpiritHippie
   f8a67daa-a690-4ec3-88fa-5dab1fea6d1f:
     group:
-    - lukeskywalker
+    - wintersoldier
     options:
       name: DV132
   62b5cb83-a0dc-472a-9bf5-d855124718a8:
@@ -13496,7 +13499,7 @@ users:
       name: LtDelicious
   2e198f59-28e6-4ff6-a475-93f896451f01:
     group:
-    - darkseid
+    - deathstroke
     options:
       name: Gigablast23
   d4ece36a-d6f9-49a0-afa9-c4c69fd6060d:
@@ -13517,9 +13520,10 @@ users:
       name: OrigamiNinja65
   c2cd3446-8f2f-44d8-a6f3-14f6fa51522a:
     group:
-    - martianmanhunter
+    - blackflash
     options:
       name: Scarywizardfire
+    permissions: []
   44dba6bd-58be-4509-b475-6a38304ee683:
     group:
     - mewtwo
@@ -13552,7 +13556,7 @@ users:
       name: SweetConnor
   a9dd3297-c39d-49f4-9441-8908a652e89f:
     group:
-    - gohan
+    - goku
     options:
       name: Omigstar123
   b4b48d04-e8ac-4764-91ad-bc1d326cf9d8:
@@ -13572,7 +13576,9 @@ users:
       name: MartinWejeMadsen
   7a3d7316-9fb3-42e6-bb67-474383ba3df0:
     group:
-    - onepunchman
+    - mortal
+    options:
+      name: birdie911
   b11b8140-fa99-4910-a504-c77d0df95c26:
     group:
     - aphrodite
@@ -13600,7 +13606,7 @@ users:
       name: thespy79
   b529b6af-1760-4194-b444-2af42caab9de:
     group:
-    - superboykonel
+    - mortal
     options:
       name: gamerguy89
   eedb9648-29c4-49ad-9c0d-1546045b766c:
@@ -13635,3 +13641,65 @@ users:
     - zeus
     options:
       name: Hector_21
+  f8ab911b-a923-43fb-b1bc-b33fc4fb18e5:
+    group:
+    - raven
+    options:
+      name: ZodiacPrincess
+  cb054741-ab79-4437-b66d-33f6a686892c:
+    group:
+    - goku
+    options:
+      name: thespy76
+  1b616299-60ce-4c17-a9d0-7206d79fa538:
+    group:
+    - zoom
+    options:
+      name: JotterrYT
+  39b20e12-93c6-4856-9284-04bd5e0646f8:
+    permissions: []
+    group:
+    - blacklanternmartianmanhunter
+    options:
+      name: AstroBoomin
+  8f111c5b-3b7c-4cfa-9228-becd2f75ad7c:
+    group:
+    - onepunchman
+    options:
+      name: Sonderer
+  8cb964f5-d345-4a65-8811-cb3b0c11b51b:
+    group:
+    - beastboy
+    options:
+      name: Vengeance007
+  77fb75a9-6acb-4a16-ae45-d4bee553af4b:
+    group:
+    - ironmanmkxliii
+    options:
+      name: DrLazYT
+  c016d3b3-b205-4699-8326-a765859fe2d0:
+    group:
+    - mewtwo
+  adef8d26-5401-4856-b246-f965ef49c994:
+    group:
+    - kira
+    options:
+      name: The_Homeboy
+  07795773-30e4-4481-a601-8179d160d25f:
+    group:
+    - venom
+    options:
+      name: Janitor
+  d8b12a1e-ea46-4320-861e-dc0eb71f255a:
+    group:
+    - daredevil
+    options:
+      name: Zerho
+  8354ed0d-09cb-4682-bf62-5df3f0e2b412:
+    group:
+    - ironmanmkxv
+    options:
+      name: _Vigilance_
+  7559d3b9-2b09-413a-8c2a-4d3e8475ca98:
+    group:
+    - mortal
