--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: greenfield
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: survival112
-    group: default
+    world: policeoffice
+    group: policeoffice
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: survival112
     group: default
@@ -33,8 +33,8 @@ v2-logout:
     group: default
     world: greenfield
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: policeoffice
     group: policeoffice
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival112
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: office
-    group: office
+    world: spawn
+    group: spawn
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
@@ -180,8 +180,8 @@ v2-logout:
     group: default
     world: greenfield
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    world: spleeflobby
-    group: spleeflobby
+    world: policeoffice
+    group: policeoffice
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group: default
     world: survival112
@@ -339,8 +339,8 @@ v2-logout:
     group: default
     world: greenfield
   1b616299-60ce-4c17-a9d0-7206d79fa538:
-    group: default
-    world: greenfield
+    group: spawn
+    world: spawn
   4bf9ce90-127c-4d8a-93a5-12c31808061f:
     group: speedforce
     world: speedforce
@@ -462,7 +462,7 @@ v2-logout:
     group: default
     world: survival112
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
-    world: greenfield
+    world: survival112
     group: default
   9d377ef9-97f1-4f4f-bfec-964323713cbe:
     group: default
@@ -728,8 +728,8 @@ v2-logout:
     group: default
     world: greenfield
   8f111c5b-3b7c-4cfa-9228-becd2f75ad7c:
-    group: colosseum
-    world: colosseum
+    group: default
+    world: greenfield
   f370e686-d055-4204-ab8d-b5f4d2c920cc:
     group: default
     world: greenfield
@@ -992,7 +992,7 @@ v2-logout:
     world: greenfield
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
     group: default
-    world: greenfield
+    world: survival112
   caf03e74-89f8-49e9-aa1b-7375fd62c1ab:
     group: escaperoom
     world: escaperoom
@@ -2223,7 +2223,7 @@ v2-logout:
     group: techcombatknockbackgame
     world: techcombatknockbackgame
   cf12947d-8b6f-463e-b40f-328fcba3c5ae:
-    world: greenfield
+    world: survival112_nether
     group: default
   10c0e6d3-0991-4554-8980-aa7a3a11c99c:
     group: default
@@ -2310,8 +2310,8 @@ v2-logout:
     group: default
     world: survival
   7cc821b3-b7fb-4d23-8db6-267059f11cc5:
-    group: default
-    world: greenfield
+    group: plots
+    world: plots
   fcf5f15b-3097-4d39-98dc-1707e5bf0b3a:
     group: default
     world: greenfield
@@ -4180,8 +4180,8 @@ v2-logout:
     group: default
     world: greenfield
   2a63e405-eecf-480a-9fcf-1e22b996d998:
-    group: default
-    world: survival112
+    group: turbotowers
+    world: turbotowers
   b17051f2-c3ef-4038-b85b-2f776ae6e1b2:
     group: default
     world: greenfield
@@ -4193,7 +4193,7 @@ v2-logout:
     world: titanstower
   ec365045-50d3-4ca2-a1dc-f0811ca5de71:
     group: default
-    world: greenfield
+    world: survival112
   eb4c14a5-41f6-4246-ae72-2f2c372dbd9b:
     group: default
     world: greenfield
@@ -4462,8 +4462,8 @@ v2-logout:
     group: default
     world: greenfield
   1699df25-d9aa-425d-afbc-1c474d35cbf8:
-    group: default
-    world: survival112
+    group: turbotowers
+    world: turbotowers
   29092b35-eaee-4f95-b562-afff65160213:
     group: default
     world: survival112
@@ -4582,8 +4582,8 @@ v2-logout:
     group: default
     world: survival112
   c7752878-d819-46ac-9cb1-4ab56769b965:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   96eec567-2978-41b9-83a7-056584031bb5:
     group: default
     world: survival112
@@ -4696,7 +4696,7 @@ v2-logout:
     world: greenfield
   48d85138-f45e-4b3d-aaa3-29a719540d7f:
     group: default
-    world: survival112
+    world: greenfield
   4451b230-8098-4f43-9337-e7120b9a5c1e:
     group: default
     world: greenfield
@@ -4932,8 +4932,8 @@ v2-logout:
     group: default
     world: survival112
   63cfe6d7-f77e-455f-8db7-aabeb8d1a227:
-    group: default
-    world: survival112
+    group: newminigamehub
+    world: newminigamehub
   438e6b6d-8dda-477a-a915-56683b9c75af:
     group: default
     world: greenfield
@@ -5191,7 +5191,7 @@ v2-logout:
     world: greenfield
   c2cd3446-8f2f-44d8-a6f3-14f6fa51522a:
     group: default
-    world: greenfield
+    world: survival112
   6be7369f-33f7-4bb8-9c1c-235e93a1bd53:
     group: default
     world: greenfield
@@ -5208,8 +5208,8 @@ v2-logout:
     group: default
     world: greenfield
   39b20e12-93c6-4856-9284-04bd5e0646f8:
-    group: lavahop
-    world: lavahop
+    group: colosseumlobby
+    world: colosseumlobby
   a492d44a-e3d8-49a8-9975-cb67a73e8f0d:
     group: default
     world: greenfield
@@ -5221,7 +5221,7 @@ v2-logout:
     world: survival112
   b9825a34-0037-4577-8f49-8d35a5d8ab97:
     group: default
-    world: survival112
+    world: greenfield
   9179f482-4c78-4e5d-a17a-462186edcff0:
     group: spawn
     world: spawn
@@ -5249,3 +5249,30 @@ v2-logout:
   494a082f-ed1a-4006-852c-8d9c2715c37b:
     group: default
     world: survival112
+  cb054741-ab79-4437-b66d-33f6a686892c:
+    group: default
+    world: survival112
+  f8ab911b-a923-43fb-b1bc-b33fc4fb18e5:
+    group: turbotowers
+    world: turbotowers
+  5124ff48-c3bf-486f-9ce4-4f57e7e8a271:
+    group: default
+    world: greenfield
+  77fb75a9-6acb-4a16-ae45-d4bee553af4b:
+    group: default
+    world: greenfield
+  7a3d7316-9fb3-42e6-bb67-474383ba3df0:
+    group: default
+    world: greenfield
+  f1706e84-3db0-47e6-83bb-0ff7a990ffb8:
+    group: default
+    world: survival112
+  adef8d26-5401-4856-b246-f965ef49c994:
+    group: plots
+    world: plots
+  d8b12a1e-ea46-4320-861e-dc0eb71f255a:
+    group: default
+    world: greenfield
+  7559d3b9-2b09-413a-8c2a-4d3e8475ca98:
+    group: plots
+    world: plots
