--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -5867,6 +5867,40 @@ groups:
         - ch.alias.haste4
         - ch.alias.haste5
         - ch.alias.haste6
+  ironmanmkii:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&7Iron &fMan &0MKII'
+      suffix: '&8'
+    worlds:
+      survival112:
+        permissions:
+        - essentials.fly
+        - essentials.speed.fly
+        - ch.alias.ironmanmkii
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.jump5
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
+        - ch.alias.haste5
+        - ch.alias.haste6        
   ironspider:
     inheritance:
     - commonherotraits
