--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,15 @@
 groups:
+  rhino:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&8R&7h&8i&fn&8o'
+      suffix: '&7'
+    worlds:
+      survival112:
+        permissions:
+        - Magic.commands.cast
+        - Magic.cast.rhinodash
   hobgoblin:
     inheritance:
     - commonherotraits
