--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,19 @@
 groups:
+  lizard:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2L&fiz&0a&fr&5d'
+      suffix: '&a'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2        
   normadesmond:
     inheritance:
     - commonherotraits
