--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,16 @@
 groups:
+  shocker:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&eSh&8o&eck&4e&er'
+      suffix: '&b'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
   normadesmond:
     inheritance:
     - commonherotraits
