--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,18 @@
 groups:
+  xenomorph:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&0Xe&8n&ao&8mor&0ph'
+      suffix: '&a'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - Magic.commands.cast
+        - Magic.cast.acidshot
   normadesmond:
     inheritance:
     - commonherotraits
