--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12699,8 +12699,9 @@ users:
     - is.headsecretary
     - is.infomanager
     group:
+    - headsecretary
     - infomanager
-    - mortal
+    - missmartian
     options:
       name: BasicallyHark
     worlds:
@@ -12708,6 +12709,7 @@ users:
         permissions: []
       newminigamehub:
         permissions:
+        - essentials.build.*
         - essentials.gamemode.*
         - essentials.gamemode
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
@@ -12715,6 +12717,7 @@ users:
     - is.secretary
     - is.officer
     group:
+    - officer
     - supergirl
     options:
       name: BasicallySugar
@@ -12723,6 +12726,7 @@ users:
         permissions: []
       newminigamehub:
         permissions:
+        - essentials.build.*
         - essentials.gamemode
         - essentials.gamemode.*
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
@@ -12845,7 +12849,7 @@ users:
     - is.secretary
     - essentials.build.*
     group:
-    - supergirl
+    - mortal
     options:
       name: BasicallyStar
     worlds:
@@ -13092,7 +13096,7 @@ users:
     permissions: []
   663fa87e-be4c-45d5-bdde-587fa94e8f97:
     group:
-    - mew
+    - vision
     options:
       name: JustKas
     permissions: []
@@ -13485,7 +13489,7 @@ users:
       name: Brettconk
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - cosmicarmorsuperman
+    - mortal
     options:
       name: Lucifer_S
     worlds:
@@ -13688,6 +13692,7 @@ users:
     - ultraboy
     options:
       name: TheRanD
+    permissions: []
   0ca9ea58-87fb-42c2-9282-cbbbdc57938b:
     group:
     - flashbartallen
@@ -13820,7 +13825,7 @@ users:
       name: FreeSpiritHippie
   f8a67daa-a690-4ec3-88fa-5dab1fea6d1f:
     group:
-    - spidermanmilesmorales
+    - fang
     options:
       name: DV132
     permissions: []
@@ -14055,7 +14060,7 @@ users:
       name: Zerho
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group:
-    - blackracerwilliewalker
+    - blacklanternsuperman
     options:
       name: _Vigilance_
     permissions:
@@ -14579,7 +14584,7 @@ users:
       name: 190snake
   071da9f3-f502-40b4-88ff-3133bfbf7e13:
     group:
-    - ghostriderjohnnyblaze
+    - hulk
     options:
       name: AbdullahM40
   2c232b4e-557a-4c2e-9712-3a5ef2726ead:
@@ -15022,9 +15027,10 @@ users:
       name: ARKDARK_PLAY
   3e886f37-7d3c-41bf-9d19-eaedba03627f:
     group:
-    - martianmanhunter
+    - firestormraymondstein
     options:
       name: omniironic
+    permissions: []
   c8b8d76d-cb65-4952-8349-ee96d33e9405:
     group:
     - ironmanmkxliii
@@ -15141,7 +15147,7 @@ users:
     permissions: []
   e8aaea13-5f5a-4f82-ba27-5c3ac811f49f:
     group:
-    - maui
+    - martianmanhunter
     permissions: []
     options:
       name: cheetahracer1
@@ -15189,7 +15195,7 @@ users:
       name: Maxboss22
   1c0600f4-5e64-42f8-8082-15827692eaad:
     group:
-    - mortal
+    - spidermanpeterparker
     options:
       name: Donki
   5e3e468e-3494-4774-b226-8fb089e72f6e:
@@ -15345,7 +15351,7 @@ users:
       name: BlueWolf4Life
   3338ef0a-4911-4934-85da-27c05754f5c3:
     group:
-    - bardock
+    - mortal
     options:
       name: sul1er
   ce99fb3e-f8e9-4a46-a592-290d2fd0a24e:
@@ -15380,7 +15386,7 @@ users:
       name: devil_spike
   d3f628b8-1b47-41a7-b6ca-a95ce5821d82:
     group:
-    - mortal
+    - arsenal
     options:
       name: Cpt_Diamond05
   b72b5047-7d59-4c19-b2dd-d99fc6f44b24:
@@ -15391,3 +15397,27 @@ users:
   37795e4b-c31c-458d-a2c9-eb0aaf6060a7:
     group:
     - flashwallywest
+  caa754e0-43c5-42bd-9bfa-350e6d7794d5:
+    group:
+    - vision
+    options:
+      name: DuckE_PVP
+  1a526dd6-fe07-4a32-8598-72c290556472:
+    group:
+    - mortal
+    options:
+      name: mohamedm40
+  e841d769-0d0e-4670-9f39-4b1d87f7a75d:
+    group:
+    - mortal
+    options:
+      name: FarrellSeattle
+  1c575be8-a874-4b78-8307-3252351ad276:
+    group:
+    - sandman
+    permissions: []
+    options:
+      name: Leedler268
+  16d364f7-7c12-4d6c-a093-7415732a592f:
+    group:
+    - spidermanpeterparker
