--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -16,7 +16,7 @@ v2-logout:
     group: default
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group: default
-    world: survival112
+    world: greenfield
   fa2821a9-27ed-43e0-99f6-e22aec572a35:
     group: default
     world: survival112
@@ -48,8 +48,8 @@ v2-logout:
     group: default
     world: greenfield
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: greenfield
-    group: default
+    world: spawn
+    group: spawn
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival112
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: spawn
-    group: spawn
+    world: newminigamehub
+    group: newminigamehub
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
@@ -1454,7 +1454,7 @@ v2-logout:
     world: survival
   0880eccc-feed-4a2f-9e22-d8f721f3913e:
     group: default
-    world: survival112
+    world: greenfield
   fc252bc6-ef87-447f-8735-28ec6c07731f:
     group: escaperoom
     world: escaperoom
@@ -2691,8 +2691,8 @@ v2-logout:
     group: default
     world: greenfield
   3e886f37-7d3c-41bf-9d19-eaedba03627f:
-    group: plots
-    world: plots
+    group: default
+    world: greenfield
   75c15929-2043-4aab-941f-38336edf47e2:
     group: default
     world: greenfield
@@ -3704,8 +3704,8 @@ v2-logout:
     group: default
     world: greenfield
   26d9c4d7-f5ca-4178-a178-73cd061c7b3a:
-    group: default
-    world: greenfield
+    group: spawn
+    world: spawn
   1ab95483-94c7-42d3-a3c6-a6ccbd524836:
     group: default
     world: survival112
@@ -4288,8 +4288,8 @@ v2-logout:
     group: default
     world: greenfield
   e7af6df4-734a-4b28-8ec9-8d133f32116b:
-    group: godlyparkour
-    world: godlyparkour
+    group: default
+    world: survival112
   df861432-313f-4847-9ba8-b82ad1b4293a:
     group: default
     world: greenfield
@@ -4710,8 +4710,8 @@ v2-logout:
     group: default
     world: survival112
   4d54be91-6769-493f-97b6-7f351cb0a194:
-    group: default
-    world: greenfield
+    group: spleeflobby
+    world: spleeflobby
   49c4c14d-4adb-47dd-b01b-ecaf5d4be7e0:
     group: default
     world: survival112
@@ -5619,8 +5619,8 @@ v2-logout:
     group: default
     world: greenfield
   0e736dda-4d6d-453a-a172-2c56f4a50565:
-    group: default
-    world: survival112
+    group: deathdrop
+    world: deathdrop
   6a5deaa5-fbc9-48f3-86dc-4e269292a735:
     group: default
     world: greenfield
@@ -5883,8 +5883,8 @@ v2-logout:
     group: torture
     world: torture
   00edd535-3a1b-4d16-9bda-e2334f846c4d:
-    group: default
-    world: greenfield
+    group: turbotowers
+    world: turbotowers
   d9986d21-14f7-48f0-a4fc-f73a80d98a06:
     group: torture
     world: torture
@@ -5958,5 +5958,14 @@ v2-logout:
     group: default
     world: greenfield
   b72b5047-7d59-4c19-b2dd-d99fc6f44b24:
+    group: default
+    world: greenfield
+  caa754e0-43c5-42bd-9bfa-350e6d7794d5:
+    group: default
+    world: greenfield
+  1a526dd6-fe07-4a32-8598-72c290556472:
+    group: default
+    world: greenfield
+  e841d769-0d0e-4670-9f39-4b1d87f7a75d:
     group: default
     world: greenfield
